--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,7 +7,11 @@
     @apply text-white;
   }
 }
-
+@layer utilities {
+  .shadow-inset-custom {
+    box-shadow: inset 0 1px 2px #eee;
+  }
+}
 @layer components {
   /* Custom Slick Arrow Positioning */
 .slick-list {
@@ -32,7 +36,15 @@
 .slick-next {
   right: -15px;
 }
+.reels-container::-webkit-scrollbar {
+  display: none;
+}
 
+/* Hide scrollbar for IE, Edge and Firefox */
+.reels-container {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
 @media (max-width: 768px) {
   .slick-prev {
     left: -10px;
