--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,6 +11,14 @@
   .shadow-inset-custom {
     box-shadow: inset 0 1px 2px #eee;
   }
+   
+    .vertical-dots-btn {
+      @apply  border-0 p-2 rounded-full text-white  hover:bg-gray-200 dark:hover:bg-gray-700 opacity-0 group-hover:opacity-100 focus:opacity-100
+    }
+    .sm-icons {
+      @apply flex items-center w-full px-4 py-2 text-sm text-left hover:bg-gray-100 dark:hover:bg-gray-700
+    }
+  
 }
 @layer components {
   /* Custom Slick Arrow Positioning */
@@ -39,6 +47,7 @@
 .reels-container::-webkit-scrollbar {
   display: none;
 }
+
 
 /* Hide scrollbar for IE, Edge and Firefox */
 .reels-container {
